HW Nov 24th 6 qs

--- a/main.tex
+++ b/main.tex
@@ -2053,8 +2053,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item It is too late to request correction after a Rule 71(3) EPC communication has been received.
-        \item It is too late to request correction after the applicant responded to the Rule 71(3) EPC communication with his approval.
+        \item It is too late to request correction after a Rule 71(3) EPC communication has been received. \F --  error can be corrected under \textbf{R.71(6) EPC }in response to \textbf{R. 71(3) }communication, or \textbf{R. 139 EPC} (until decision is handed over to internal postal service - \textsc{G 12/91})
+        \item It is too late to request correction after the applicant responded to the Rule 71(3) EPC communication with his approval. \F -- you can file amendments up to the day before handing over decision to grant to EPO postal service.
     \end{enumerate}
     
     \vspace{1em}
@@ -2064,8 +2064,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*), resume]
-        \item The EPO will allow the correction, because the error as well as its correction are obvious in view of the priority document.
-        \item The EPO will allow the correction, because a translation may be brought into conformity with the original text at any time.
+        \item The EPO will allow the correction, because the error as well as its correction are obvious in view of the priority document. \F -- it should be obvious from application as filed --- \textbf{priority document is not part of the application as filed}. Careful though, as prio. doc and abstract may be used as source of \textit{common general knowledge} for \textbf{R. 139 EPC} corrections; see \textsc{G 3/89} and \textit{page 247} of \textbf{\textit{Lobato}}.
+        \item The EPO will allow the correction, because a translation may be brought into conformity with the original text at any time. \F -- it was filed directly in English.
     \end{enumerate}
 
     \item % Question 5
@@ -2076,10 +2076,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The applicant can request extension of the period with two months, which he will get granted provided it is requested before the expiry of the original period.
-        \item If the applicant fails to pay the fee for grant and publishing, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing.
-        \item If the applicant fails to pay the fee for grant and publishing and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing, and a further processing fee at the flat amount specified in RFees 2(1).12 for the late filing of the translations of the claims.
-        \item If the applicant fails to file a translation of the complete application into English and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the filing of the translations, as well as the payment of the associated further processing fee.
+        \item The applicant can request extension of the period with two months, which he will get granted provided it is requested before the expiry of the original period. \F -- you cannot extend periods that are set in the EPC. \textbf{R. 71(3) EPC} has a specified period of 4 months.
+        \item If the applicant fails to pay the fee for grant and publishing, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing. \F -- in the event of \textit{late performance of acts under \textbf{R. 71(3) EPC}}, there is a flat fee of 300 \textsc{eur} provided for in \textbf{Rfees2(1).12}.
+        \item If the applicant fails to pay the fee for grant and publishing and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the payment of the fee for grant and publishing as well as a further processing fee at the level of 50\% of the fee for grant and publishing, and a further processing fee at the flat amount specified in RFees 2(1).12 for the late filing of the translations of the claims. \F -- in the event of \textit{late performance of acts under \textbf{R. 71(3) EPC}}, there is a flat fee of 300 \textsc{eur} provided for in \textbf{Rfees2(1).12}.
+        \item If the applicant fails to file a translation of the complete application into English and fails to file a translation of the claims into English and German, he may request further processing. Such further processing shall comprise the filing of the translations, as well as the payment of the associated further processing fee. \F -- you only need to translate the claims.
     \end{enumerate}
 
     \item % Question 6
