HW Nov 24th 6 qs

--- a/main.tex
+++ b/main.tex
@@ -2094,18 +2094,18 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \begin{enumerate}[label=(\alph*)]
         \item In response to the Rule 71(3) EPC communication, ...
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item ... ten claims fees still have to be paid.
-            \item ... eight claims fees still have to be paid.
-            \item ... five claims fees still have to be paid.
-            \item ... three claims fees still have to be paid.
+            \item ... ten claims fees still have to be paid. \F
+            \item ... eight claims fees still have to be paid. \F
+            \item ... five claims fees still have to be paid. \F
+            \item ... three claims fees still have to be paid. \T -- fees are incurred for the claim set with the highest number of claims and they \textit{do not} include fees for claims that have already been paid. 
         \end{enumerate}
         
         \item If claims fees are only paid in respect of the claim set of 20 claims, ...
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item ...the UK designation will be deemed withdrawn.
-            \item ... the applicant will be invited to pay further claims fees within 1 month from the invitation.
-            \item ... the applicant may request further processing in respect of the non-paid fees.
-            \item ... the applicant may request further processing in respect of the acts of Rule 71(3) EPC by completing the payment of the missed claims fees and payment of the further processing fee referred to in RFees 2(1).12 as "fee for FP in the event of late performance of the acts required under Rule 71(3) EPC".
+            \item ...the UK designation will be deemed withdrawn. \F
+            \item ... the applicant will be invited to pay further claims fees within 1 month from the invitation. \F
+            \item ... the applicant may request further processing in respect of the non-paid fees. \T
+            \item ... the applicant may request further processing in respect of the acts of Rule 71(3) EPC by completing the payment of the missed claims fees and payment of the further processing fee referred to in RFees 2(1).12 as "fee for FP in the event of late performance of the acts required under Rule 71(3) EPC". \F -- The flat FP fee of RFees 2(1).12, for the missed R.71(3) acts does not cover the claims fees under R.71(4)
         \end{enumerate}
     \end{enumerate}
 
