HW Nov 24th all Qs

--- a/main.tex
+++ b/main.tex
@@ -2120,26 +2120,26 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The applicant can file the amended claims on or before the expiry of the time limit to respond to communication IGRA1 and wait for a second Rule 71(3) communication before filing the translations of the amended claims into the other two EPO languages and paying the fee for grant and publishing.
-        \item The applicant must file translations of the amended claims into the other two EPO languages on or before the expiry of the time limit to respond to communication IGRA1.
-        \item The applicant can, within the time limit to respond to communication IGRA1, file the amended claims, file translations of the amended claims into the other two EPO languages, pay the fee for grant and publishing, pay two claims fees, and expressly waive a further Rule 71(3) communication.
-        \item The amendments may be presented as handwritten amendments on a copy of the set of the original claims, after which the Examining Division will send a new Rule 71(3) without any further intermediate communications.
-        \item The applicant must pay two claims fees on or before the expiry of the time limit to respond to communication IGRA1.
-        \item The time limit to respond to communication IGRA1 is 7 February 2024.
+        \item The applicant can file the amended claims on or before the expiry of the time limit to respond to communication IGRA1 and wait for a second Rule 71(3) communication before filing the translations of the amended claims into the other two EPO languages and paying the fee for grant and publishing. \T
+        \item The applicant must file translations of the amended claims into the other two EPO languages on or before the expiry of the time limit to respond to communication IGRA1. \F -- must not do anything if he doesn't agree with the final text.
+        \item The applicant can, within the time limit to respond to communication IGRA1, file the amended claims, file translations of the amended claims into the other two EPO languages, pay the fee for grant and publishing, pay two claims fees, and expressly waive a further Rule 71(3) communication. \F --- waiving \textbf{R. 71(3) EPC} existed from 2015 but was abolished in 2020.
+        \item The amendments may be presented as handwritten amendments on a copy of the set of the original claims, after which the Examining Division will send a new Rule 71(3) without any further intermediate communications. \F -- no handwritten amendments allowed.
+        \item The applicant must pay two claims fees on or before the expiry of the time limit to respond to communication IGRA1. \F -- you don't have to pay if you don't agree with the final text.
+        \item The time limit to respond to communication IGRA1 is 7 February 2024. \F -- it's 4 months.
     \end{enumerate}
 
     \vspace{1em}
     Optional question from EPAC 2023 \\
-    On 16? November 2020, you filed a European patent application EP-A, which did not claim priority. Today, 12? October 2023, you receive a communication from the EPO entitled "Decision to grant a European patent pursuant to Article? 97(1) EPC". This communication states that the mention of the grant will be published in the European Patent Bulletin on 8 ?November 2023. You wish to validate the patent in only two contracting states to the EPC.
+    On 16 November 2020, you filed a European patent application EP-A, which did not claim priority. Today, 12 October 2023, you receive a communication from the EPO entitled "Decision to grant a European patent pursuant to Article 97(1) EPC". This communication states that the mention of the grant will be published in the European Patent Bulletin on 8 November 2023. You wish to validate the patent in only two contracting states to the EPC.
     
     \vspace{1em}
     Which of the following statements is correct? (single choice)
     
     \begin{enumerate}[label=\Alph*.]
-        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 16 November 2023.
-        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 30 November 2023.
-        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 8 January 2024 at the latest.
-        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 16 January 2024 at the latest.
+        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 16 November 2023. \F -- it's \textit{de ultimo ad ultimo} = 30 Nov 23.
+        \item The renewal fee for the fourth year must be paid centrally to the EPO. The due date is 30 November 2023. \F -- renewal fee falls due after mention of grant. It needs to be paid to the two validated country national offices.
+        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 8 January 2024 at the latest. \T -- \textbf{Art. 141(2) EPC} provides for a 2-month ``safety'' period regardless of national law after mention of grant.
+        \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 16 January 2024 at the latest. \F -- it's 8 \textsc{jan} 2024 at the latest.
     \end{enumerate}
 
   \end{enumerate}
