--- a/main.tex
+++ b/main.tex
@@ -2142,8 +2142,104 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 16 January 2024 at the latest. \F -- it's 8 \textsc{jan} 2024 at the latest.
     \end{enumerate}
 
-  \end{enumerate}
+\section{December 01, 2025}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    C1-08 \\
+    The applicant has identified that for some users it is easier to understand data when it is displayed as numerical values, whereas others might prefer a colour-coded display. He filed a European patent application directed to a device comprising a display and means for allowing the user to choice of the one or other manner of displaying the data, with the effect that choice of the manner allow a user of the device to easier understand the data that is presented.
+    
+    \vspace{1em}
+    Is the device excluded from patentability under Art.52(2)(d) EPC as presentation of information? \\
+    If not, can the device be considered inventive based on the mentioned effect?
+
+\p Claim must be considered as a whole - GL G-II, 2; GL G-II, 3.7 \\
+\p Invention may not be subject of EP application if it is non-technical as such - Art. 52(2)(b), (3) EPC \\
+\p Once it is established that the claimed subject-matter as a whole is not excluded from patentability, it is examined in respect of the other requirements of patentability, in particular novelty and inventive step (G-I, 1) - GL G-II, 3.7. \\
+\p As the claim is directed to a device (and also has a technical feature: the display), the claim as a whole is considered technical and not excluded under Art.52(2)(d)/(3) EPC as presentation of information as such. \\
+\p The alleged effect depends on subjective interests or preferences of the user and is thus not considered to be a technical effect [GL G-II, 3.7]. \\
+\p Therefore, the alleged effect cannot be used to support inventive step. - Art. 56 EPC \\
+
+
+    \item % Question 2
+    C2-03 (Basic selection)
+    \begin{enumerate}[label=(\alph*)]
+        \item What happens to the prior right effect of a conflicting earlier European patent application if that application was withdrawn before the date of publication?
+        \item After publication of the earlier European patent application, the applicant withdraws the priority claim. What happens to the prior right effect?
     \end{enumerate}
 
+    \item % Question 3
+    C2-05 (Basic selection) \\
+    In October 2016 applicant P filed a European patent application EP1 as a first filing claiming subject-matter A. EP1 is subsequently published. In March 2017, applicant Q has filed a European application EP2 as a first filing claiming subject-matter A and independently subject-matter B.
+    
+    \vspace{1em}
+    Who has the right to a patent and for what subject-matter?
+
+    \item % Question 4
+    C2-10 (Basic selection) \\
+    An invention is displayed at the Exhibition "Future energy: Solutions for Tackling Mankind's Greatest Challenge" in Astana (KZ). The product was displayed for the first time on 9 September 2017, allowing members of the public to view and fully understand the invention. The inventor subsequently wants to obtain patent protection in Europe for his invention. \\
+    If today is 26 February 2018, would this still be possible? And if so, what actions must be performed to secure his rights?
+    
+    \vspace{1em}
+    Comment: "Future energy: Solutions for Tackling Mankind's Greatest Challenge" was a recognised International Exhibition, see OJ 2016 A38:
+
+    \item % Question 5
+    C3-04 (Basic selection) \\
+    A European patent application EP-A describes and claims a composition X1 comprising components A1 and B2. During the European search, a European patent application EP-B is found describing "a class of compositions X wherein X1 comprises a first component selected from a first list of twelve components A1, A2, ..., A12 and a second component selected from a second list of nine components B1, B2, ...., B9". No specific combinations are disclosed in EP-B. EP-B is a prior right with respect to EP-A.
+    
+    \vspace{1em}
+    Is the claim novel in EP-A in view of EP-B?
+
+    \item % Question 6
+    C3-05 (Basic selection) \\
+    A European patent application EP-A describes and claims a compound comprising chlorine. During the European search, a European patent application EP-B is found describing compound wherein the compound comprises a halogen. EP-B is a prior right (= prior art under Art.54(3) EPC) with respect to EP-A. (\textit{Comment: Chlorine is a halogen.})
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Is the claim novel in EP-A in view of EP-B?
+        \item Would your answer have been different if EP-B had enumerated all halogens?
+        \item Would your answer to the questions (a) and (b) have been different if EP-B was a normal prior art document? (= prior art under Art.54(2) EPC)
+    \end{enumerate}
+
+    \item % Question 7
+    C4-15 (Basic selection) \\
+    Are the following claims formulations allowable under the EPC as independent claims directed to a further therapeutic use?
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Substance X for use in a method for the treatment of Y
+        \item Substance X for use in the therapy of Y
+        \item Substance X for use in a method of treating Y
+        \item Substance X for use in a method of therapy of Y
+        \item Substance X for use as an anti-inflammatory medicament (where the medicament is defined by its function)
+        \item Composition comprising X for use in a method for the treatment of Y
+    \end{enumerate}
+
+    \vspace{1em}
+    Are the following claims formulations allowable under the EPC if the further therapeutic use is based on the use of the same product in a different treatment of the same disease?
+    
+    \begin{enumerate}[label=(\alph*), resume]
+        \item Substance X for use in a method for the treatment of Y wherein the substance is administered topically
+        \item Substance X for use in the therapy of Y wherein the substance is administered three times daily
+        \item Substance X for use in a method of treating Y wherein the substance is administered three times daily at a dose in a range of 10-20 mg
+        \item Substance X for use in a method of therapy of Y wherein the substance is administered topically
+        \item Substance X for use as an anti-inflammatory medicament wherein the substance is administered topically (where the medicament is defined by its function)
+    \end{enumerate}
+
+    \vspace{1em}
+    Are the following claims formulations allowable under the EPC?
+    
+    \begin{enumerate}[label=(\alph*), resume]
+        \item Substance X for a method for the treatment of Y
+        \item Substance X in a method for the treatment of Y
+        \item Medicament for topical treatment
+        \item Anti-inflammatory medicament for topical treatment
+        \item Pharmaceutical comprising substance X for topical treatment
+        \item Composition comprising X as an anti-inflammatory agent
+        \item Composition comprising X for use as an antifungal agent
+        \item Composition comprising X for use as an antibacterial agent
+    \end{enumerate}
+\end{enumerate}
+\end{enumerate}
+\end{enumerate}
 
 \end{document}
