--- a/main.tex
+++ b/main.tex
@@ -2165,8 +2165,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \item % Question 2
     C2-03 (Basic selection)
     \begin{enumerate}[label=(\alph*)]
-        \item What happens to the prior right effect of a conflicting earlier European patent application if that application was withdrawn before the date of publication?
-        \item After publication of the earlier European patent application, the applicant withdraws the priority claim. What happens to the prior right effect?
+        \item What happens to the prior right effect of a conflicting earlier European patent application if that application was withdrawn before the date of publication? -- An \textbf{Art. 54(3) EPC} app. needs to be \textbf{pending} at publication to be used as prior right (see \textbf{J 5/81}).
+        \item After publication of the earlier European patent application, the applicant withdraws the priority claim. What happens to the prior right effect? -- it remains unaffected.
     \end{enumerate}
 
     \item % Question 3
@@ -2174,7 +2174,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     In October 2016 applicant P filed a European patent application EP1 as a first filing claiming subject-matter A. EP1 is subsequently published. In March 2017, applicant Q has filed a European application EP2 as a first filing claiming subject-matter A and independently subject-matter B.
     
     \vspace{1em}
-    Who has the right to a patent and for what subject-matter?
+    Who has the right to a patent and for what subject-matter? \\
+\p Applicant P has the right to subject-matter A. Applicant Q has right to sjm. B. Novelty is spoiled by EP1 under \textbf{Art. 54(3) EPC}, so Q cannot get protection for A.
 
     \item % Question 4
     C2-10 (Basic selection) \\
