HW Dec 1st nearly all Qs

--- a/main.tex
+++ b/main.tex
@@ -2167,15 +2167,15 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \begin{enumerate}[label=(\alph*)]
         \item What happens to the prior right effect of a conflicting earlier European patent application if that application was withdrawn before the date of publication? -- An \textbf{Art. 54(3) EPC} app. needs to be \textbf{pending} at publication to be used as prior right (see \textbf{J 5/81}).
         \item After publication of the earlier European patent application, the applicant withdraws the priority claim. What happens to the prior right effect? -- it remains unaffected.
-    \end{enumerate}
+    \end{enumerate} 
 
     \item % Question 3
     C2-05 (Basic selection) \\
-    In October 2016 applicant P filed a European patent application EP1 as a first filing claiming subject-matter A. EP1 is subsequently published. In March 2017, applicant Q has filed a European application EP2 as a first filing claiming subject-matter A and independently subject-matter B.
+    In October 2016 applicant P filed a European patent application EP1 as a first filing claiming subject-matter A. EP1 is subsequently published. In March 2017, applicant Q has filed a European application EP2 as a first filing claiming subject-matter A and independently subject-matter B. 
     
     \vspace{1em}
     Who has the right to a patent and for what subject-matter? \\
-\p Applicant P has the right to subject-matter A. Applicant Q has right to sjm. B. Novelty is spoiled by EP1 under \textbf{Art. 54(3) EPC}, so Q cannot get protection for A.
+\p Applicant P has the right to subject-matter A. Applicant Q has right to sjm. B. Novelty is spoiled by EP1 under \textbf{Art. 54(3) EPC}, so Q cannot get protection for A. \\
 
     \item % Question 4
     C2-10 (Basic selection) \\
@@ -2183,23 +2183,24 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     If today is 26 February 2018, would this still be possible? And if so, what actions must be performed to secure his rights?
     
     \vspace{1em}
-    Comment: "Future energy: Solutions for Tackling Mankind's Greatest Challenge" was a recognised International Exhibition, see OJ 2016 A38:
+    "\textit{Future energy: Solutions for Tackling Mankind's Greatest Challenge}" was a recognised International Exhibition, see OJ 2016 A38, with the first day of the exhibition being 10.06.2017. \\
+    So under \textbf{Art. 55(1)(b) EPC}, you have (non-extendable in any way) 6 months from \textit{\textbf{the first day of the display of the invention}} to file an EP app. So the deadline for filing is 09.03.2018 -- so in this case it is still possible. The Applicant must present an official supporting certificate from the expo within 4 months of the filing of the application under \textbf{R. 25 EPC}. The cert. has to be issued during the expo to make it legally viable. The full list of conditions is in  \textbf{R. 25 EPC}. For Euro-PCT entry, the certificate needs to be filed within the 31-month period of \textbf{R. 159(1) EPC}. \\  
 
     \item % Question 5
     C3-04 (Basic selection) \\
     A European patent application EP-A describes and claims a composition X1 comprising components A1 and B2. During the European search, a European patent application EP-B is found describing "a class of compositions X wherein X1 comprises a first component selected from a first list of twelve components A1, A2, ..., A12 and a second component selected from a second list of nine components B1, B2, ...., B9". No specific combinations are disclosed in EP-B. EP-B is a prior right with respect to EP-A.
     
     \vspace{1em}
-    Is the claim novel in EP-A in view of EP-B?
+    Is the claim novel in EP-A in view of EP-B? \T --- \textsc{ep-a} is novel in view of \textsc{ep-b} under EPO's ``\underline{\textbf{two-list principle}},'' i.e., the selection of the sepcific combination from two lists with more than 2 or 3 members each was not preferably disclosed in \textsc{ep-b}. See also \textsc{GL G--VI, 7. Selection of inventions}. \\
 
     \item % Question 6
     C3-05 (Basic selection) \\
     A European patent application EP-A describes and claims a compound comprising chlorine. During the European search, a European patent application EP-B is found describing compound wherein the compound comprises a halogen. EP-B is a prior right (= prior art under Art.54(3) EPC) with respect to EP-A. (\textit{Comment: Chlorine is a halogen.})
     
     \begin{enumerate}[label=(\alph*)]
-        \item Is the claim novel in EP-A in view of EP-B?
-        \item Would your answer have been different if EP-B had enumerated all halogens?
-        \item Would your answer to the questions (a) and (b) have been different if EP-B was a normal prior art document? (= prior art under Art.54(2) EPC)
+        \item Is the claim novel in EP-A in view of EP-B? \T -- the disclosure of the \textit{genus} cannot spoil the novelty of the \textit{species}.
+        \item Would your answer have been different if EP-B had enumerated all halogens? \T -- once chlorine had been explicitly disclosed in \textsc{ep-b}, it would be novelty-destroying for \textsc{ep-a}. Nice way to think about this is as a \underline{\textbf{selection of a single element from a single list}}. 
+        \item Would your answer to the questions (a) and (b) have been different if EP-B was a normal prior art document? (= prior art under Art.54(2) EPC) \F
     \end{enumerate}
 
     \item % Question 7
