HW Dec 1st all Qs

--- a/main.tex
+++ b/main.tex
@@ -2208,37 +2208,39 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     Are the following claims formulations allowable under the EPC as independent claims directed to a further therapeutic use?
     
     \begin{enumerate}[label=(\alph*)]
-        \item Substance X for use in a method for the treatment of Y
-        \item Substance X for use in the therapy of Y
-        \item Substance X for use in a method of treating Y
-        \item Substance X for use in a method of therapy of Y
-        \item Substance X for use as an anti-inflammatory medicament (where the medicament is defined by its function)
-        \item Composition comprising X for use in a method for the treatment of Y
+        \item Substance X for use in a method for the treatment of Y \T
+        \item Substance X for use in the therapy of Y \T
+        \item Substance X for use in a method of treating Y \T
+        \item Substance X for use in a method of therapy of Y \T
+        \item Substance X for use as an anti-inflammatory medicament (where the medicament is defined by its function) \T
+        \item Composition comprising X for use in a method for the treatment of Y \T
     \end{enumerate}
 
+    The ``\textit{for use}'' formulation is explained as allowable in \textsc{GL G--VI, 6.1.2 therapeutic uses pursuant to Art. 54(5)}. 
+    
     \vspace{1em}
     Are the following claims formulations allowable under the EPC if the further therapeutic use is based on the use of the same product in a different treatment of the same disease?
     
     \begin{enumerate}[label=(\alph*), resume]
-        \item Substance X for use in a method for the treatment of Y wherein the substance is administered topically
-        \item Substance X for use in the therapy of Y wherein the substance is administered three times daily
-        \item Substance X for use in a method of treating Y wherein the substance is administered three times daily at a dose in a range of 10-20 mg
-        \item Substance X for use in a method of therapy of Y wherein the substance is administered topically
-        \item Substance X for use as an anti-inflammatory medicament wherein the substance is administered topically (where the medicament is defined by its function)
+        \item Substance X for use in a method for the treatment of Y wherein the substance is administered topically \T -- OK because it specifies what the treatment is for.
+        \item Substance X for use in the therapy of Y wherein the substance is administered three times daily \T -- OK because it specifies what the treatment is for.
+        \item Substance X for use in a method of treating Y wherein the substance is administered three times daily at a dose in a range of 10-20 mg \T -- OK because it specifies what the treatment is for.
+        \item Substance X for use in a method of therapy of Y wherein the substance is administered topically \T -- OK because it specifies what the treatment is for.
+        \item Substance X for use as an anti-inflammatory medicament wherein the substance is administered topically (where the medicament is defined by its function) \T -- OK because it specifies what the substance is doing.
     \end{enumerate}
 
     \vspace{1em}
     Are the following claims formulations allowable under the EPC?
     
     \begin{enumerate}[label=(\alph*), resume]
-        \item Substance X for a method for the treatment of Y
-        \item Substance X in a method for the treatment of Y
-        \item Medicament for topical treatment
-        \item Anti-inflammatory medicament for topical treatment
-        \item Pharmaceutical comprising substance X for topical treatment
-        \item Composition comprising X as an anti-inflammatory agent
-        \item Composition comprising X for use as an antifungal agent
-        \item Composition comprising X for use as an antibacterial agent
+        \item Substance X for a method for the treatment of Y \F
+        \item Substance X in a method for the treatment of Y \F
+        \item Medicament for topical treatment \F
+        \item Anti-inflammatory medicament for topical treatment \F
+        \item Pharmaceutical comprising substance X for topical treatment \F
+        \item Composition comprising X as an anti-inflammatory agent \F
+        \item Composition comprising X for use as an antifungal agent \T --- Not a further medical use within the meaning of \textbf{Art. 53(c) EPC}, because the claim does not define a specific medical use of the claimed product. It encompasses non-medical uses, because antifungal/antibacterial agents are also used in e.g., agriculture for treating plants.
+        \item Composition comprising X for use as an antibacterial agent \T --- Not a further medical use within the meaning of \textbf{Art. 53(c) EPC}, because the claim does not define a specific medical use of the claimed product. It encompasses non-medical uses, because antifungal/antibacterial agents are also used in e.g., agriculture for treating plants.
     \end{enumerate}
 \end{enumerate}
 \end{enumerate}
